Implementation of Power of Attorney minified version